# Youtube_summary

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-image.yml
youtube_summary/: main.py
youtube_summary/db/: crud.py  database.py  models.py  schemas.py
youtube_summary/endpoints/: summaries.py  users.py
youtube_summary/migrations/: alembic.ini  env.py
youtube_summary/migrations/versions/: 0002_summary_added.py  0003_summary_added.py  0004_title_removed.py
youtube_summary/utils/: utils.py
